src/objects/CHN_SENS_API_CALLOUTS__mdt.object
<CustomObject>
    <fields>
        <fullName>Request_Parser_Class__c</fullName>
        <label>Request Parser Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Name__c</fullName>
        <label>Service Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LEAGUE</fullName>
                    <default>true</default>
                    <label>LEAGUE</label>
                </value>
                <value>
                    <fullName>ICUE</fullName>
                </value>
                <value>
                    <fullName>HSID</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CHN SENS API CALLOUTS</label>
    <pluralLabel>CHN SENS API CALLOUTSS</pluralLabel>
</CustomObject>